# ax-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  apt-packages.txt  ax-commands.json  install-ax.ps1  install-ax.sh  install.sh
.claude/: CLAUDE.md  settings.json
.claude/rules/: basic_rule.md
.claude/scripts/: notify.sh
.gitea/workflows/: build.yml  release.yml
.github/workflows/: build.yml  release.yml
bash/: .bashrc  .zshrc  proxy.sh
bash/completions/: ax  ax.zsh
config/: config.yaml
config/bash/: .bashrc  .zshrc
config/tmux/: tmux.conf
config/wezterm/: wezterm.lua
docs/: README.md  cheatsheet.md  packages.md  requirements.md  tech-stack.md
docs/01-standards/: doc-first-rule.md
docs/02-product/: PRD.md  README.md  changelog.md  user-stories.md  wezterm-keybindings.md
docs/03-design/: README.md  command-system.md  completion-i18n.md  config-system.md  env-management.md  install-flow.md  platform-support.md  proxy-system.md  terminal-keybindings.md
docs/04-architecture/: README.md  extension-guide.md  module-dependencies.md  overview.md
docs/modules/: README.md  ax.md  install.md  lib.md  proxy.md  wezterm.md  zsh.md
install/: install-ax.ps1  install-ax.sh
lib/: deploy.sh  detect.sh  packages.sh  shell.sh  tools.sh
npm/install-ax/: install.js  uninstall.js
src/: cli.rs  config.rs  detect.rs  main.rs  packages.rs  shell.rs  tools.rs
src/commands/: add.rs  completion.rs  config.rs  edit.rs  env.rs  info.rs  install.rs  link.rs  list.rs  mod.rs  proxy.rs  pull.rs  push.rs  rm.rs  run.rs  ssh.rs  update.rs
wezterm/: wezterm.lua
(+5 files in other folders)
