[package]
name = "ax-cli"
version = "0.1.0"
edition = "2021"
description = "Personal dev environment CLI manager"

[[bin]]
name = "ax"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
dirs = "5"
which = "6"
git2 = "0.19"
regex = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "s"
lstrip = true
